# minecraft-fancy-rcon-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: help_parser.rs  main.rs  mc_commands.rs
