[package]
name = "minecraft-fancy-rcon-cli"
version = "0.1.0"
edition = "2021"

description = "A Rust-based Minecraft RCON CLI with rustyline autocompletion."
repository = "https://github.com/GuyLewin/minecraft-fancy-rcon-cli"
readme = "README.md"
keywords = ["minecraft", "rcon", "cli"]
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
minecraft-client-rs = "0.1"
rustyline = "15.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.4"
regex = "1.11"

[profile.release]
lto = true
